--- a/public/data/lang/az.json
+++ b/public/data/lang/az.json
@@ -1,3 +1,8 @@
 {
-    "esas_sehife":"Əsas səhifə"
+    "esas_sehife":"Əsas səhifə",
+    "qeydiyyat":"Qeydiyyat",
+    "giris":"Giriş",
+    "axtaris":"Axtarış",
+    "xatirla":"Xatırla",
+    "cixis":"Çıxış"
 }
