--- a/public/data/lang/az.json
+++ b/public/data/lang/az.json
@@ -4,5 +4,6 @@
     "giris":"Giriş",
     "axtaris":"Axtarış",
     "xatirla":"Xatırla",
-    "cixis":"Çıxış"
+    "cixis":"Çıxış",
+    "salonlar":"Salonlar"
 }
