--- a/public/data/lang/en.json
+++ b/public/data/lang/en.json
@@ -4,5 +4,6 @@
     "giris":"Login",
     "axtaris":"Search",
     "xatirla":"Remember me",
-    "cixis":"Logout"
+    "cixis":"Logout",
+    "salonlar":"Salons"
 }
