--- a/public/data/lang/az.json
+++ b/public/data/lang/az.json
@@ -5,5 +5,6 @@
     "axtaris":"Axtarış",
     "xatirla":"Xatırla",
     "cixis":"Çıxış",
-    "salonlar":"Salonlar"
+    "salonlar":"Salonlar",
+    "profil":"Profil"
 }
