--- a/public/data/lang/en.json
+++ b/public/data/lang/en.json
@@ -5,5 +5,6 @@
     "axtaris":"Search",
     "xatirla":"Remember me",
     "cixis":"Logout",
-    "salonlar":"Salons"
+    "salonlar":"Salons",
+    "profil":"Profile"
 }
