--- a/public/data/lang/az.json
+++ b/public/data/lang/az.json
@@ -6,5 +6,6 @@
     "xatirla":"Xatırla",
     "cixis":"Çıxış",
     "salonlar":"Salonlar",
-    "profil":"Profil"
+    "profil":"Profil",
+    "sekiller":"Şəkillər"
 }
