--- a/public/data/lang/en.json
+++ b/public/data/lang/en.json
@@ -6,5 +6,6 @@
     "xatirla":"Remember me",
     "cixis":"Logout",
     "salonlar":"Salons",
-    "profil":"Profile"
+    "profil":"Profile",
+    "sekiller":"Images"
 }
